Fixed alignment of site's header text

--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -3,3 +3,5 @@ $site-footer-height: 100px;
 
 $dark-lime-green: #519548;
 $strong-green: #88c425;
+
+$hamburger-button-width: 44px;
