--- a/static/css/partials/_site-header.scss
+++ b/static/css/partials/_site-header.scss
@@ -45,13 +45,13 @@
   float: left;
   transform: translateY(-50%);
 
-  margin: 0;
+  margin: 0 (-$hamburger-button-width) 0 0;
   border: 0;
   background-color: transparent;
   background-image: none;
   padding: 0;
 
-  width: 44px;
+  width: $hamburger-button-width;
   height: 100%;
 }
 
